# WikiForge

./: .gitignore  AGENTS.md  LICENSE  README.md  social-posts.md
backend/: config.example.yaml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: ingest.py  lint.py  search.py  wiki.py
backend/app/eval/: evaluator.py
backend/app/ingest/: classifier.py  pipeline.py  segmenter.py  tasks.py  vision.py
backend/app/ingest/extractors/: docx.py  markdown.py  pdf.py  pptx.py
backend/app/lint/: checker.py
backend/app/llm/: base.py  claude.py  openai_compat.py  prompts.py  router.py
backend/app/models/: database.py  schemas.py
backend/app/search/: bm25_index.py  hybrid.py  query.py
backend/app/wiki/: generator.py  git_ops.py  index.py  log.py  refs.py  topics.py
backend/wiki-root/: CLAUDE.md
backend/wiki-root/.obsidian/: app.json  appearance.json
docs/: llm-integration-guide.md  minimax-integration.md
frontend/: README.md  index.html
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: IngestPage.tsx  LintPage.tsx  SearchPage.tsx  WikiPage.tsx
scripts/: deploy.sh
